# munet

./: .gitignore  .pylintrc  Dockerfile  Makefile  README-mutest.org  README-setest.org  README.md  README.org  jsonschema-handcraft.json  munet-schema.yaml  poetry.toml  pyproject.toml  quick-start-guide.org  readthedocs.yml
.github/workflows/: ci.yml  publish.yml  sshd_config.tpl  testpub.yml
data/: logconf.yaml
doc/source/: api.rst  conf.py  config.rst  index.rst  mutest.rst  nodes.rst  usage.rst
doc/source/api/: base.rst  cli.rst  compat.rst  config.rst  mutest.userapi.rst  native.rst  parser.rst  unshare.rst
doc/source/figures/: munet-cmd-structure.graffle
examples/features/hostintf/: munet.yaml
examples/features/hwintf/: munet.yaml
examples/features/init-host-net/: munet.yaml
examples/features/router-vms/: munet-c8000v.yaml  munet.yaml
examples/frr/: README.md
examples/frr/ospf/: README.md
examples/frr/ospf/auth/: README.md  munet.yaml
examples/frr/ospf/auth/r2/etc.frr/: frr.conf
examples/frr/ospf/auth/r3/etc.frr/: daemons  frr.conf
examples/frr/ospf/auth/r4/etc.frr/: frr.conf
examples/frr/ospf/complex-cost/: README.md  munet.yaml
examples/frr/ospf/complex-cost/r1/etc.frr/: frr.conf
examples/frr/ospf/complex-cost/r2/etc.frr/: frr.conf
examples/frr/ospf/complex-cost/r3/etc.frr/: frr.conf
examples/frr/ospf/complex-cost/r4/etc.frr/: daemons  frr.conf
examples/frr/ospf/complex-cost/r5/etc.frr/: frr.conf
examples/frr/ospf/complex-cost/r6/etc.frr/: frr.conf
examples/frr/ospf/cost/: README.md  munet.yaml
examples/frr/ospf/cost/r1/etc.frr/: frr.conf
examples/frr/ospf/cost/r2/etc.frr/: frr.conf
examples/frr/ospf/cost/r3/etc.frr/: frr.conf
examples/frr/ospf/double-virtual-link/: README.md  munet.yaml
examples/frr/ospf/double-virtual-link/r4/etc.frr/: frr.conf
examples/frr/ospf/double-virtual-link/r5/etc.frr/: frr.conf
examples/frr/ospf/double-virtual-link/r6/etc.frr/: frr.conf
examples/frr/ospf/manual-interface/: README.md  munet.yaml
examples/frr/ospf/multipoint/: README.md  munet.yaml
examples/frr/ospf/mutest/: munet.yaml  mutest_ospf.py
examples/frr/ospf/nssa/: README.md  munet.yaml
examples/frr/ospf/ospf/: README.md  munet.yaml
examples/frr/ospf/parallel-link/: README.md  munet.yaml
examples/frr/ospf/point-to-point/: README.md  munet.yaml
examples/frr/ospf/priority/: README.md  munet.yaml
examples/frr/ospf/redistribute/: README.md  munet.yaml
examples/frr/ospf/shortcut/: README.md  munet.yaml
examples/frr/ospf/stub/: README.md  munet.yaml
examples/frr/ospf/virtual-link/: README.md  munet.yaml
examples/frr/pim/: README.md
examples/frr/pim/asm/: README.md  munet.yaml
examples/frr/pim/assert/: README.md  munet.yaml
examples/frr/pim/spt-switchover/: README.md  munet.yaml
examples/frr/pim/ssm/: README.md  munet.yaml
examples/mutest/: munet.yaml  mutest_ospf.py  mutest_shell.py
examples/mutest/r3/etc.frr/: frr.conf
micronet/: __init__.py  __main__.py  base.py  cleanup.py  cli.py  logconf.yaml  native.py  parser.py
munet/: __init__.py  __main__.py  args.py  base.py  cleanup.py  cli.py  compat.py  config.py  kinds.yaml  linux.py  logconf-mutest.yaml  logconf.yaml  logging.py  lutil.py  mucmd.py  mulog.py  munet-schema.json  munet-schema.yaml  mutest.py  mutestshare.py  mutini.py  native.py  parser.py  unshare.py  watchlog.py
munet/mutest/: __main__.py  jsoncompare.py  userapi.py
munet/testing/: fixtures.py  hooks.py  util.py
tests/: conftest.py  kinds.yaml
tests/basic/: munet.yaml  noinit-noshell.yaml  noinit.yaml  test_basic_cmds.py  test_basic_constraints.py  test_basic_topology.py  topology.yaml
tests/cleanup/: munet.yaml  test_cleanup.py
tests/cli/: munet-ci.yaml  munet.yaml  test_cli.py
tests/common/: fetch.py  sshd_config.tpl
tests/config/: munet.json  munet.toml  munet.yaml  test_basic_config.py  topology.json  topology.toml  topology.yaml
tests/config/cmd/: munet.yaml  pycmd.py  test_config_cmd.py  test_namespace_cmd.py
tests/config/p2p-addr/: munet.yaml  test_p2p_peer_addr.py
tests/config/qdisc/: munet.yaml  test_qdisc_cmd.py
tests/config/unconnected/: munet.yaml  test_unconnected.py
tests/configfmt/: munet.json  test_basic_config.py
tests/container/: munet.yaml  mutest_basic_container.py  test_basic_container.py  test_basic_topology.py  topology.yaml
tests/control/: munet-ci.yaml  munet.yaml  test_cmds.py  test_spawn.py
tests/forward/: munet.yaml  test_forward.py
tests/forward/r1/etc.frr/: frr.conf
tests/forward/r2/etc.frr/: frr.conf
tests/forward/r3/etc.frr/: daemons  frr.conf
tests/mutest/: inc_b_fail.py  inc_subtest.py  inc_withsection.py  mufail_badjson.py  munet.yaml  mut_failtest.py  mutest_a.py  mutest_b.py  mutest_cwd.py  mutest_fail.py  mutest_func.py  mutest_inctest.py  mutest_matchwait.py  mutest_matchwait_json.py  mutest_step.py  show_output.txt
tests/mutest/include/: checknorm.py  inc_inctest.py  inc_secinctest.py  inc_subtest.py  inc_withsection.py  sectest.py  test.py
tests/mutest/test_groups/: mutest_01_groups_first.py  mutest_99_groups_last.py
tests/mutest_after/env_vars/: munet.yaml  mutest_config_env.py
tests/p2p-addr/: test_p2p_peer_addr.py
tests/qemu/: .gitignore  _test_qemu.py  munet-cloud.yaml  munet-vm.yaml  munet.yaml  network-config.yaml  router_munet.yaml  test_cloud.py  test_qemu.py  test_ubuntu.py  user-data.yaml
tests/qemu/config/initial-cmd/: cmd-initial-qemu.sh  cmd-qemu.sh  munet-vm.yaml  netcfg.yaml  r2-netcfg.yaml  test_qemu_cmd.py
tests/qemu/config/mounting/: munet-vm.yaml  munet.yaml  test_mounting.py
tests/qemu/config/mounting/bind2/: mount.txt
tests/qemu/config/mounting/usb/: mount.txt
tests/search/: kinds.yaml
tests/search/sdir_a/: kinds.yaml  munet.yaml  test_search_a.py
tests/search/sdir_b/: kinds.yaml  munet.yaml  test_search_b.py
tests/setest/: conftest.py  setest_two.py  test_exec.py
tests/spawn/: munet.yaml  test_spawn.py
tests/testing/: test_testing.py
tests/unconnected/: test_unconnected.py
tests/watchlog/: munet.yaml  test_watchlog.py
(+76 files in other folders)
