[tool.poetry]
name = "munet"
version = "0.9.19"
description = "A package to facilitate network simulations"
authors = ["Christian Hopps <chopps@labn.net>"]
license = "GPL-2.0-or-later"
readme = "README.org"
repository = "https://github.com/LabNConsulting/munet"

include = ["logconf.yaml", "munet-schema.json"]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.8.0"
PyYAML = "^6.0"
jsonschema = "^4.16.0"
toml = {version = "^0.10.2", optional = true}
autoflake = {version = "^1.7.0", optional = true}
flake8 = {version = "^5.0.4", optional = true}
importmagic = {version = "^0.1.7", optional = true}
jedi = {version = "^0.18.1", optional = true}
json-rpc = {version = "^1.13.0", optional = true}
Pygments = {version = "^2.13.0", optional = true}
pyang = {version = "^2.5.3", optional = true}
requests = {version = "^2.28.1", optional = true, extras = ["ci"]}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.3"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^2.5.0"
toml = "^0.10.2"
pyang-json-schema-plugin = {git = "https://github.com/LabNConsulting/pyang-json-schema-plugin.git", rev = "labn-master"}

[tool.poetry.extras]
ci = ["requests", "pyang", "pyang-json-schema-plugin"]
schemadev = ["pyang", "pyang-json-schema-plugin"]
ide = ["Pygments", "autoflake", "flake8", "importmagic", "jedi", "json-rpc"]

[tool.poetry.scripts]
munet = "munet.__main__:main"
mucmd = "munet.mucmd:main"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["munet", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "munet"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
ignore = "E203,E741,W504"

[tool.pylint.messages_control]
disable = [
  "broad-except",
  "consider-using-f-string",    # this would also be nice, but too much
  "consider-using-with",        # this would be nice if it wasn't so simple
  "duplicate-code",
  "fixme",
  "invalid-name",               # sometimes 1 char variable names are fine
  "missing-function-docstring", # would be nice, a pipe-dream really
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-return-statements",
  "too-many-statements",
  "unknown-option-value",
]
max-line-length = 88

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8

[tool.pytest.ini_options]

asyncio_mode = "auto"
norecursedirs = "tests/qemu"

testpaths = [
        "tests",
]

log_level = "INFO"
log_format = "%(asctime)s,%(msecs)03d %(levelname)s: %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

# If verbose is specifyied log_cli will be set to 1, it can also be specified
# here or on the CLI.
# log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s,%(msecs)03d %(levelname)s: %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "exec-pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s,%(msecs)03d %(levelname)s: %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
